// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PostHeaderUserInfo - Snapshots > matches snapshot for current user (no Follow button) 1`] = `
<div
  data-hover="true"
  data-testid="popover"
>
  <div
    data-as-child="true"
    data-testid="popover-trigger"
  >
    <div
      class="flex w-fit min-w-0 items-center gap-3"
      data-override-defaults="true"
      data-testid="container"
    >
      <a
        class="shrink-0"
        data-testid="profile-link"
        href="/profile/snapshotUserKey"
      >
        <div
          data-size="default"
          data-testid="avatar"
        >
          <div
            data-testid="avatar-fallback"
          >
            SN
          </div>
        </div>
      </a>
      <div
        class="min-w-0 flex-1"
        data-override-defaults="true"
        data-testid="container"
      >
        <a
          class="block w-fit max-w-full min-w-0"
          data-testid="profile-link"
          href="/profile/snapshotUserKey"
        >
          <p
            class="block w-full max-w-full cursor-pointer truncate font-bold text-foreground text-base leading-5"
            data-testid="typography"
          >
            Snapshot User
          </p>
        </a>
        <div
          class="flex min-w-0 flex-wrap items-center gap-2"
          data-override-defaults="true"
          data-testid="container"
        >
          <p
            class="text-xs leading-4 font-medium tracking-[0.075rem] whitespace-nowrap text-muted-foreground uppercase"
            data-testid="typography"
          >
            snap...rKey
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    data-side-offset="1"
    data-testid="popover-content"
  >
    <div
      data-testid="popover-inner-content"
    >
      <div
        data-testid="avatar"
      />
      <div>
        Snapshot User
      </div>
      <div>
        @
        snap...rKey
      </div>
    </div>
  </div>
</div>
`;

exports[`PostHeaderUserInfo - Snapshots > matches snapshot when following 1`] = `
<div
  data-hover="true"
  data-testid="popover"
>
  <div
    data-as-child="true"
    data-testid="popover-trigger"
  >
    <div
      class="flex w-fit min-w-0 items-center gap-3"
      data-override-defaults="true"
      data-testid="container"
    >
      <a
        class="shrink-0"
        data-testid="profile-link"
        href="/profile/otherUser123"
      >
        <div
          data-size="default"
          data-testid="avatar"
        >
          <div
            data-testid="avatar-fallback"
          >
            OT
          </div>
        </div>
      </a>
      <div
        class="min-w-0 flex-1"
        data-override-defaults="true"
        data-testid="container"
      >
        <a
          class="block w-fit max-w-full min-w-0"
          data-testid="profile-link"
          href="/profile/otherUser123"
        >
          <p
            class="block w-full max-w-full cursor-pointer truncate font-bold text-foreground text-base leading-5"
            data-testid="typography"
          >
            Other User
          </p>
        </a>
        <div
          class="flex min-w-0 flex-wrap items-center gap-2"
          data-override-defaults="true"
          data-testid="container"
        >
          <p
            class="text-xs leading-4 font-medium tracking-[0.075rem] whitespace-nowrap text-muted-foreground uppercase"
            data-testid="typography"
          >
            othe...r123
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    data-side-offset="1"
    data-testid="popover-content"
  >
    <div
      data-testid="popover-inner-content"
    >
      <div
        data-testid="avatar"
      />
      <div>
        Other User
      </div>
      <div>
        @
        othe...r123
      </div>
    </div>
  </div>
</div>
`;

exports[`PostHeaderUserInfo - Snapshots > matches snapshot with all new props 1`] = `
<div
  data-hover="true"
  data-testid="popover"
>
  <div
    data-as-child="true"
    data-testid="popover-trigger"
  >
    <div
      class="flex w-fit min-w-0 items-center gap-4"
      data-override-defaults="true"
      data-testid="container"
    >
      <a
        class="shrink-0"
        data-testid="profile-link"
        href="/profile/snapshotUserKey"
      >
        <div
          data-size="xl"
          data-testid="avatar"
        >
          <img
            alt="Snapshot User"
            data-testid="avatar-image"
            src="https://example.com/avatar.png"
          />
          <div
            data-testid="avatar-fallback"
          >
            SN
          </div>
        </div>
      </a>
      <div
        class="min-w-0 flex-1"
        data-override-defaults="true"
        data-testid="container"
      >
        <a
          class="block w-fit max-w-full min-w-0"
          data-testid="profile-link"
          href="/profile/snapshotUserKey"
        >
          <p
            class="block w-full max-w-full cursor-pointer truncate font-bold text-foreground text-2xl leading-8"
            data-testid="typography"
          >
            Snapshot User
          </p>
        </a>
        <div
          class="flex min-w-0 flex-wrap items-center gap-2"
          data-override-defaults="true"
          data-testid="container"
        >
          <p
            class="text-xs leading-4 font-medium tracking-[0.075rem] whitespace-nowrap text-muted-foreground uppercase"
            data-testid="typography"
          >
            snap...rKey
          </p>
          <span
            data-testid="post-header-timestamp"
          >
            1h ago
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    data-side-offset="1"
    data-testid="popover-content"
  >
    <div
      data-testid="popover-inner-content"
    >
      <div
        data-testid="avatar"
      />
      <div>
        Snapshot User
      </div>
      <div>
        @
        snap...rKey
      </div>
    </div>
  </div>
</div>
`;

exports[`PostHeaderUserInfo - Snapshots > matches snapshot with all props 1`] = `
<div
  data-hover="true"
  data-testid="popover"
>
  <div
    data-as-child="true"
    data-testid="popover-trigger"
  >
    <div
      class="flex w-fit min-w-0 items-center gap-3"
      data-override-defaults="true"
      data-testid="container"
    >
      <a
        class="shrink-0"
        data-testid="profile-link"
        href="/profile/snapshotUserKey"
      >
        <div
          data-size="default"
          data-testid="avatar"
        >
          <img
            alt="Snapshot User"
            data-testid="avatar-image"
            src="https://example.com/avatar.png"
          />
          <div
            data-testid="avatar-fallback"
          >
            SN
          </div>
        </div>
      </a>
      <div
        class="min-w-0 flex-1"
        data-override-defaults="true"
        data-testid="container"
      >
        <a
          class="block w-fit max-w-full min-w-0"
          data-testid="profile-link"
          href="/profile/snapshotUserKey"
        >
          <p
            class="block w-full max-w-full cursor-pointer truncate font-bold text-foreground text-base leading-5"
            data-testid="typography"
          >
            Snapshot User
          </p>
        </a>
        <div
          class="flex min-w-0 flex-wrap items-center gap-2"
          data-override-defaults="true"
          data-testid="container"
        >
          <p
            class="text-xs leading-4 font-medium tracking-[0.075rem] whitespace-nowrap text-muted-foreground uppercase"
            data-testid="typography"
          >
            snap...rKey
          </p>
          <p
            class="shrink-0 text-xs leading-4 font-medium tracking-[0.075rem] whitespace-nowrap text-muted-foreground tabular-nums sm:hidden"
            data-testid="typography"
          >
            150
            /
            280
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    data-side-offset="1"
    data-testid="popover-content"
  >
    <div
      data-testid="popover-inner-content"
    >
      <div
        data-testid="avatar"
      />
      <div>
        Snapshot User
      </div>
      <div>
        @
        snap...rKey
      </div>
    </div>
  </div>
</div>
`;

exports[`PostHeaderUserInfo - Snapshots > matches snapshot with bio 1`] = `
<div
  data-hover="true"
  data-testid="popover"
>
  <div
    data-as-child="true"
    data-testid="popover-trigger"
  >
    <div
      class="flex w-fit min-w-0 items-center gap-3"
      data-override-defaults="true"
      data-testid="container"
    >
      <a
        class="shrink-0"
        data-testid="profile-link"
        href="/profile/snapshotUserKey"
      >
        <div
          data-size="default"
          data-testid="avatar"
        >
          <div
            data-testid="avatar-fallback"
          >
            SN
          </div>
        </div>
      </a>
      <div
        class="min-w-0 flex-1"
        data-override-defaults="true"
        data-testid="container"
      >
        <a
          class="block w-fit max-w-full min-w-0"
          data-testid="profile-link"
          href="/profile/snapshotUserKey"
        >
          <p
            class="block w-full max-w-full cursor-pointer truncate font-bold text-foreground text-base leading-5"
            data-testid="typography"
          >
            Snapshot User
          </p>
        </a>
        <div
          class="flex min-w-0 flex-wrap items-center gap-2"
          data-override-defaults="true"
          data-testid="container"
        >
          <p
            class="text-xs leading-4 font-medium tracking-[0.075rem] whitespace-nowrap text-muted-foreground uppercase"
            data-testid="typography"
          >
            snap...rKey
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    data-side-offset="1"
    data-testid="popover-content"
  >
    <div
      data-testid="popover-inner-content"
    >
      <div
        data-testid="avatar"
      />
      <div>
        Snapshot User
      </div>
      <div>
        @
        snap...rKey
      </div>
    </div>
  </div>
</div>
`;

exports[`PostHeaderUserInfo - Snapshots > matches snapshot with large size 1`] = `
<div
  data-hover="true"
  data-testid="popover"
>
  <div
    data-as-child="true"
    data-testid="popover-trigger"
  >
    <div
      class="flex w-fit min-w-0 items-center gap-4"
      data-override-defaults="true"
      data-testid="container"
    >
      <a
        class="shrink-0"
        data-testid="profile-link"
        href="/profile/snapshotUserKey"
      >
        <div
          data-size="xl"
          data-testid="avatar"
        >
          <div
            data-testid="avatar-fallback"
          >
            SN
          </div>
        </div>
      </a>
      <div
        class="min-w-0 flex-1"
        data-override-defaults="true"
        data-testid="container"
      >
        <a
          class="block w-fit max-w-full min-w-0"
          data-testid="profile-link"
          href="/profile/snapshotUserKey"
        >
          <p
            class="block w-full max-w-full cursor-pointer truncate font-bold text-foreground text-2xl leading-8"
            data-testid="typography"
          >
            Snapshot User
          </p>
        </a>
        <div
          class="flex min-w-0 flex-wrap items-center gap-2"
          data-override-defaults="true"
          data-testid="container"
        >
          <p
            class="text-xs leading-4 font-medium tracking-[0.075rem] whitespace-nowrap text-muted-foreground uppercase"
            data-testid="typography"
          >
            snap...rKey
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    data-side-offset="1"
    data-testid="popover-content"
  >
    <div
      data-testid="popover-inner-content"
    >
      <div
        data-testid="avatar"
      />
      <div>
        Snapshot User
      </div>
      <div>
        @
        snap...rKey
      </div>
    </div>
  </div>
</div>
`;

exports[`PostHeaderUserInfo - Snapshots > matches snapshot with minimal props 1`] = `
<div
  data-hover="true"
  data-testid="popover"
>
  <div
    data-as-child="true"
    data-testid="popover-trigger"
  >
    <div
      class="flex w-fit min-w-0 items-center gap-3"
      data-override-defaults="true"
      data-testid="container"
    >
      <a
        class="shrink-0"
        data-testid="profile-link"
        href="/profile/user123"
      >
        <div
          data-size="default"
          data-testid="avatar"
        >
          <div
            data-testid="avatar-fallback"
          >
            TE
          </div>
        </div>
      </a>
      <div
        class="min-w-0 flex-1"
        data-override-defaults="true"
        data-testid="container"
      >
        <a
          class="block w-fit max-w-full min-w-0"
          data-testid="profile-link"
          href="/profile/user123"
        >
          <p
            class="block w-full max-w-full cursor-pointer truncate font-bold text-foreground text-base leading-5"
            data-testid="typography"
          >
            Test User
          </p>
        </a>
        <div
          class="flex min-w-0 flex-wrap items-center gap-2"
          data-override-defaults="true"
          data-testid="container"
        >
          <p
            class="text-xs leading-4 font-medium tracking-[0.075rem] whitespace-nowrap text-muted-foreground uppercase"
            data-testid="typography"
          >
            user123
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    data-side-offset="1"
    data-testid="popover-content"
  >
    <div
      data-testid="popover-inner-content"
    >
      <div
        data-testid="avatar"
      />
      <div>
        Test User
      </div>
      <div>
        @
        user123
      </div>
    </div>
  </div>
</div>
`;

exports[`PostHeaderUserInfo - Snapshots > matches snapshot with timeAgo 1`] = `
<div
  data-hover="true"
  data-testid="popover"
>
  <div
    data-as-child="true"
    data-testid="popover-trigger"
  >
    <div
      class="flex w-fit min-w-0 items-center gap-3"
      data-override-defaults="true"
      data-testid="container"
    >
      <a
        class="shrink-0"
        data-testid="profile-link"
        href="/profile/snapshotUserKey"
      >
        <div
          data-size="default"
          data-testid="avatar"
        >
          <div
            data-testid="avatar-fallback"
          >
            SN
          </div>
        </div>
      </a>
      <div
        class="min-w-0 flex-1"
        data-override-defaults="true"
        data-testid="container"
      >
        <a
          class="block w-fit max-w-full min-w-0"
          data-testid="profile-link"
          href="/profile/snapshotUserKey"
        >
          <p
            class="block w-full max-w-full cursor-pointer truncate font-bold text-foreground text-base leading-5"
            data-testid="typography"
          >
            Snapshot User
          </p>
        </a>
        <div
          class="flex min-w-0 flex-wrap items-center gap-2"
          data-override-defaults="true"
          data-testid="container"
        >
          <p
            class="text-xs leading-4 font-medium tracking-[0.075rem] whitespace-nowrap text-muted-foreground uppercase"
            data-testid="typography"
          >
            snap...rKey
          </p>
          <span
            data-testid="post-header-timestamp"
          >
            5m ago
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    data-side-offset="1"
    data-testid="popover-content"
  >
    <div
      data-testid="popover-inner-content"
    >
      <div
        data-testid="avatar"
      />
      <div>
        Snapshot User
      </div>
      <div>
        @
        snap...rKey
      </div>
    </div>
  </div>
</div>
`;

exports[`PostHeaderUserInfo - Snapshots > matches snapshot without avatarUrl 1`] = `
<div
  data-hover="true"
  data-testid="popover"
>
  <div
    data-as-child="true"
    data-testid="popover-trigger"
  >
    <div
      class="flex w-fit min-w-0 items-center gap-3"
      data-override-defaults="true"
      data-testid="container"
    >
      <a
        class="shrink-0"
        data-testid="profile-link"
        href="/profile/snapshotUserKey"
      >
        <div
          data-size="default"
          data-testid="avatar"
        >
          <div
            data-testid="avatar-fallback"
          >
            SN
          </div>
        </div>
      </a>
      <div
        class="min-w-0 flex-1"
        data-override-defaults="true"
        data-testid="container"
      >
        <a
          class="block w-fit max-w-full min-w-0"
          data-testid="profile-link"
          href="/profile/snapshotUserKey"
        >
          <p
            class="block w-full max-w-full cursor-pointer truncate font-bold text-foreground text-base leading-5"
            data-testid="typography"
          >
            Snapshot User
          </p>
        </a>
        <div
          class="flex min-w-0 flex-wrap items-center gap-2"
          data-override-defaults="true"
          data-testid="container"
        >
          <p
            class="text-xs leading-4 font-medium tracking-[0.075rem] whitespace-nowrap text-muted-foreground uppercase"
            data-testid="typography"
          >
            snap...rKey
          </p>
          <p
            class="shrink-0 text-xs leading-4 font-medium tracking-[0.075rem] whitespace-nowrap text-muted-foreground tabular-nums sm:hidden"
            data-testid="typography"
          >
            50
            /
            280
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    data-side-offset="1"
    data-testid="popover-content"
  >
    <div
      data-testid="popover-inner-content"
    >
      <div
        data-testid="avatar"
      />
      <div>
        Snapshot User
      </div>
      <div>
        @
        snap...rKey
      </div>
    </div>
  </div>
</div>
`;

exports[`PostHeaderUserInfo - Snapshots > matches snapshot without character count 1`] = `
<div
  data-hover="true"
  data-testid="popover"
>
  <div
    data-as-child="true"
    data-testid="popover-trigger"
  >
    <div
      class="flex w-fit min-w-0 items-center gap-3"
      data-override-defaults="true"
      data-testid="container"
    >
      <a
        class="shrink-0"
        data-testid="profile-link"
        href="/profile/snapshotUserKey"
      >
        <div
          data-size="default"
          data-testid="avatar"
        >
          <img
            alt="Snapshot User"
            data-testid="avatar-image"
            src="https://example.com/avatar.png"
          />
          <div
            data-testid="avatar-fallback"
          >
            SN
          </div>
        </div>
      </a>
      <div
        class="min-w-0 flex-1"
        data-override-defaults="true"
        data-testid="container"
      >
        <a
          class="block w-fit max-w-full min-w-0"
          data-testid="profile-link"
          href="/profile/snapshotUserKey"
        >
          <p
            class="block w-full max-w-full cursor-pointer truncate font-bold text-foreground text-base leading-5"
            data-testid="typography"
          >
            Snapshot User
          </p>
        </a>
        <div
          class="flex min-w-0 flex-wrap items-center gap-2"
          data-override-defaults="true"
          data-testid="container"
        >
          <p
            class="text-xs leading-4 font-medium tracking-[0.075rem] whitespace-nowrap text-muted-foreground uppercase"
            data-testid="typography"
          >
            snap...rKey
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    data-side-offset="1"
    data-testid="popover-content"
  >
    <div
      data-testid="popover-inner-content"
    >
      <div
        data-testid="avatar"
      />
      <div>
        Snapshot User
      </div>
      <div>
        @
        snap...rKey
      </div>
    </div>
  </div>
</div>
`;
